# mmo-server

./: .dockerignore  .dockerignore.depends  .gitcommit-message.txt  .gitignore  .travis.yml  .trivas.yml  254_debug.env  README.md  build_base1804_image.sh  build_mmo-server-depends.sh  build_publish_image.sh  clear_all_stop_image.sh  create_network.sh  docker_pull_depends.sh  docker_push_depends.sh  docker_push_publish.sh  globaldb.env  init_globaldb.sh  init_newzonedb.sh  install_docker.sh  link_codedir.sh  pull_depends_image.sh  remove_all_none_images.sh  run_global_dev.sh  run_mysql.sh  run_zone_dev.sh  show_serverdetail.sh  start_all_global.sh  start_code.sh  start_mysql.sh  zone_1.config  zone_1.env
server-code/: .clang-format  .clang-tidy  .gdbinit_txt  .gitignore  CMakeLists.txt  README.md  build.sh  build_and_check.sh  clear_build.sh  depends  format-file.sh  gbk2utf8.sh  install_ccache.sh  make_proj.bat  releasebuild.sh
server-code/core/: CMakeLists.txt
server-code/core/CMake/: FindLibClang.cmake  protobuf_gen.cmake
server-code/core/comm/: CMakeLists.txt
server-code/core/comm/basecode/: BaseCode.h  CMakeLists.txt  CallStackDumper.cpp  CheckUtil.h  FileLock.cpp  FileLock.h  FileUtil.h  IDGenPool.h  IntUtil.h  LockfreeQueue.h  LoggingMgr.cpp  LoggingMgr.h  MD5.cpp  MemoryHelp.cpp  MemoryHelp.h  Misc.h  MyTimer.cpp  Noncopyable.h  PerSecondCount.h  ProtobuffParse.h  ProtobuffUtil.cpp  ProtobuffUtil.h  RandomGet.cpp  RandomGet.h  SampleDynamicBitset.h  SegvCatch.cpp  Singleton.h  SkipList.h  StaticHash.h  StaticReflection.h  StaticReflectionV2.h  StringAlgo.cpp  T_GameDataMap.h  Thread.cpp  Thread.h  TimeUtil.cpp  TimeUtil.h  TupleHelper.h  UIDFactory.cpp  UIDFactory.h  (+8 more)
server-code/core/comm/crypto_comm/: CMakeLists.txt  Decryptor.cpp  Decryptor.h  Encryptor.cpp  Encryptor.h  NormalCrypto.cpp  NormalCrypto.h
server-code/core/comm/message_route/: CMakeLists.txt  MessagePort.cpp  MessagePort.h  MessageRoute.cpp  MessageRoute.h  db  google  msg_internal.proto  serverinfodb.h  sql_options
server-code/core/comm/mydb/: CMakeLists.txt  DBField.cpp  DBField.h  DBFieldInfo.h  DBRecord.cpp  DBRecord.h  MysqlConnection.cpp  MysqlConnection.h  MysqlStmt.h  MysqlTableCheck.h  MysqlUrl.h
server-code/core/comm/network/: BytePerSecondCount.h  CMakeLists.txt  Decryptor.h  EventEntry.cpp  EventEntry.h  EventManager.cpp  EventManager.h  NetClientSocket.cpp  NetClientSocket.h  NetServerSocket.cpp  NetServerSocket.h  NetSocket.cpp  NetSocket.h  NetworkDefine.h  NetworkMessage.cpp  NetworkMessage.h  NetworkService.cpp  NetworkService.h
server-code/core/comm/pb_util/: CMakeLists.txt  DataPack.h  ProtobuffUtil.cpp  ProtobuffUtil.h
server-code/core/comm/script/: CMakeLists.txt  ScriptManager.h  basecode2lua.cpp  lua_tinker.cpp  lua_tinker.h  lua_tinker_stackobj.h  pb_luahelper.h
server-code/core/comm/util/: StaticTypeInfo.h
server-code/core/proto/: CMakeLists.txt
server-code/core/proto/datapack/: CfgDataPack.proto
server-code/core/proto/sql_options/: sql_options.pb.cc  sql_options.pb.h
server-code/core/service/: CMakeLists.txt
server-code/core/service/rpcservice_comm/: CMakeLists.txt  RPCService.cpp  RPCService.h
server-code/core/service/service_comm/: CMakeLists.txt  MonitorMgr.cc  MsgProcessRegister.h  ServiceComm.cpp  ServiceComm.h  ServiceDefine.h
server-code/core/service_loader/: CMakeLists.txt  ServiceLoader.cpp  ServiceLoader.h  main.cpp
server-code/core/test/: CMakeLists.txt
server-code/core/test/cryptopp_test/: CMakeLists.txt  main.cpp
server-code/core/test/db_tester/: CMakeLists.txt  main.cpp
server-code/core/test/static_reflection_test/: CMakeLists.txt  main.cpp
server-code/core/test/zset_tester/: CMakeLists.txt
server-code/core/tools/: CMakeLists.txt
server-code/core/tools/cxx2lua/: CMakeLists.txt  main.cpp
server-code/core/tools/excel2pb/: CMakeLists.txt  main.cpp
server-code/core/tools/pbbin2json/: CMakeLists.txt  main.cpp
server-code/core/tools/pbbin2txt/: CMakeLists.txt  main.cpp
server-code/core/tools/protoc-gen-sql/: CMakeLists.txt  google  proto-sql.cpp  proto-sql.h  sql_code_generator.cpp  sql_code_generator.h
server-code/core/tools/sql2cpp/: CMakeLists.txt  main.cpp
server-code/core/tools/sqlurl/: CMakeLists.txt  main.cpp
server-code/doc/: README.md  server开发环境.MD  单服模型.vsd  跨服共用pk服多服模型.vsd  跨服单区多服模型.vsd  非跨服多服模型.vsd
server-code/excel/: Cfg_AIType.xlsx  Cfg_BornPos.xlsx  Cfg_Item.xlsx  Cfg_ItemFormula.xlsx  Cfg_Scene.xlsx  Cfg_Scene_LeavePoint.xlsx  Cfg_Scene_MonsterGenerator.xlsx  Cfg_SkillAttachStatus.xlsx  Cfg_Suit.xlsx  Cfg_TargetFAM.xlsx  Cfg_Task.xlsx
server-code/res/config/: Cfg_BornPos.bytes  Cfg_Bullet.bytes  Cfg_Item.bytes  Cfg_ItemFormula.bytes  Cfg_Scene_Reborn.bytes  Cfg_SkillFAM.bytes  Cfg_StatusAttrib.bytes  Cfg_TargetFAM.bytes
server-code/res/db/: README.md  gamedb.sql  globaldb.sql
server-code/res/map/: map_10003.scene
server-code/res/script/ai_service/: main.lua
server-code/res/script/zone/: README.md  main.lua
server-code/src/: CMakeLists.txt  share-code
server-code/src/CMake/: FindLibClang.cmake
server-code/src/comm/: CMakeLists.txt
server-code/src/comm/basecode/: BaseCode.cpp  BaseCode.h  BaseType.h  CMakeLists.txt  CallStackDumper.cpp  CallStackDumper.h  CheckUtil.h  EnumUtil.h  FileLock.cpp  FileLock.h  FileUtil.h  GameMath.cpp  GameMath.h  IDGenPool.h  INILoader.h  IntUtil.h  LockfreeQueue.h  LoggingMgr.cpp  LoggingMgr.h  Math.h  MathDef.h  MemoryHeap.cpp  MemoryHeap.h  MemoryHelp.cpp  MemoryHelp.h  Misc.h  MyTimer.cpp  MyTimer.h  (+43 more)
server-code/src/game_comm/: CMakeLists.txt
server-code/src/server_share/: ActorAttrib.h  GameEventDef.h  GameLog.h  HateList.h  IService.h  ScriptCallBackType.h  SkillType.h  UserAttr.h  game_common_def.h
server-code/src/service/: CMakeLists.txt
server-code/src/service_loader/: CMakeLists.txt  ServiceLoader.cpp  ServiceLoader.h  main.cpp
server-code/src/share/: ActorAttrib.h  GameEventDef.h  GameLog.h  HateList.h  IService.h  UserAttr.h  game_common_def.h
server-code/src/test/: CMakeLists.txt
server-code/src/tools/: CMakeLists.txt
(+1041 files in other folders)
