MESSAGE(STATUS "cmake: sql_options")

IF(TIDY)
set(CMAKE_CXX_CLANG_TIDY ${MY_CLANG_TIDY_STR})
ELSE()
ENDIF()
IF(USE_JEMALLOC)
ADD_DEFINITIONS(-DUSE_JEMALLOC)
set(JEMALLOC_LIB_NAME "libjemalloc.so")
ELSE()
ENDIF()



#message(STATUS "PROTO:" ${PROTOS} )
# include PROTO_HEADER
set(Protobuf_IMPORT_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_BINARY_DIR})

# 生成sql_options.proto
PROTOBUF_GENERATE_CPP_NEW(SQL_OPTIONS_SRC SQL_OPTIONS_HEADER ${CMAKE_CURRENT_SOURCE_DIR}  ${CMAKE_CURRENT_SOURCE_DIR}/sql_options/sql_options.proto)
PROTOBUF_GENERATE_CPP_NEW(DATA_PACK_SRC DATA_PACK_HEADER ${CMAKE_CURRENT_SOURCE_DIR}  ${CMAKE_CURRENT_SOURCE_DIR}/datapack/CfgDataPack.proto)
# 生成库文件
ADD_LIBRARY(sql_options SHARED ${SQL_OPTIONS_SRC}  ${SQL_OPTIONS_HEADER})
ADD_LIBRARY(sql_options_static STATIC ${SQL_OPTIONS_SRC}  ${SQL_OPTIONS_HEADER})
ADD_LIBRARY(data_pack SHARED ${DATA_PACK_SRC}  ${DATA_PACK_HEADER})
ADD_LIBRARY(data_pack_static STATIC ${DATA_PACK_SRC}  ${DATA_PACK_HEADER})
#SET_TARGET_PROPERTIES(network PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(network PROPERTIES VERSION 0.1 SOVERSION 1)


#指定库输出路径
SET(LIBRARY_OUTPUT_PATH ${LIBRARIES_CORE})

# 指定额外的链接库
TARGET_LINK_LIBRARIES(sql_options
 protobuf
 ${JEMALLOC_LIB_NAME}
)
TARGET_LINK_LIBRARIES(sql_options_static
 protobuf
)
TARGET_LINK_LIBRARIES(data_pack
 protobuf
 ${JEMALLOC_LIB_NAME}
)
TARGET_LINK_LIBRARIES(data_pack_static
 protobuf
)
