ADD_SUBDIRECTORY(service_comm)
ADD_SUBDIRECTORY(rpcservice_comm)

ADD_SUBDIRECTORY(socket_service)
ADD_SUBDIRECTORY(world_service)
ADD_SUBDIRECTORY(zone_service)
ADD_SUBDIRECTORY(ai_service)
ADD_SUBDIRECTORY(market_service)
ADD_SUBDIRECTORY(gm_service)

ADD_SUBDIRECTORY(gmproxy_service)
ADD_SUBDIRECTORY(route_service)




