set(PCH_INCLUDE_PATH "${COTIRE_PREFIX_HEADER_INCLUDE_PATH}" "${PROJECT_SOURCE_DIR}/src/comm" "${PROJECT_SOURCE_DIR}/src/game_comm")
set_directory_properties(PROPERTIES COTIRE_PREFIX_HEADER_INCLUDE_PATH "${PCH_INCLUDE_PATH}")



ADD_SUBDIRECTORY(service_comm)
ADD_SUBDIRECTORY(rpcservice_comm)

ADD_SUBDIRECTORY(socket_service)
ADD_SUBDIRECTORY(world_service)
ADD_SUBDIRECTORY(zone_service)
ADD_SUBDIRECTORY(ai_service)
ADD_SUBDIRECTORY(market_service)
ADD_SUBDIRECTORY(gm_service)

ADD_SUBDIRECTORY(gmproxy_service)
ADD_SUBDIRECTORY(route_service)




