MESSAGE(STATUS "cmake: test-")
set(PCH_INCLUDE_PATH "${COTIRE_PREFIX_HEADER_INCLUDE_PATH}" "${PROJECT_SOURCE_DIR}/src/comm" "${PROJECT_SOURCE_DIR}/src/game_comm")

set_directory_properties(PROPERTIES COTIRE_PREFIX_HEADER_INCLUDE_PATH "${PCH_INCLUDE_PATH}")

ADD_SUBDIRECTORY(db_tester)
ADD_SUBDIRECTORY(zset_tester)
ADD_SUBDIRECTORY(static_reflection_test)

