
ADD_SUBDIRECTORY(sql2cpp)
ADD_SUBDIRECTORY(pb_lua)
#ADD_SUBDIRECTORY(db_tester)
#ADD_SUBDIRECTORY(zset_tester)
ADD_SUBDIRECTORY(robotclient)
ADD_SUBDIRECTORY(pbbin2txt)
ADD_SUBDIRECTORY(excel2pb)

IF(WIN32)
ELSE()
#ADD_SUBDIRECTORY(http_c++)
ENDIF()

IF(LIBCLANG)
ADD_SUBDIRECTORY(cxx2lua)
ELSE()
ENDIF()