
set(PCH_INCLUDE_PATH "${COTIRE_PREFIX_HEADER_INCLUDE_PATH}" "${PROJECT_SOURCE_DIR}/src/comm" "${PROJECT_SOURCE_DIR}/src/game_comm")

set_directory_properties(PROPERTIES COTIRE_PREFIX_HEADER_INCLUDE_PATH "${PCH_INCLUDE_PATH}")

ADD_SUBDIRECTORY(sql2cpp)
ADD_SUBDIRECTORY(robotclient)
ADD_SUBDIRECTORY(pbbin2txt)
ADD_SUBDIRECTORY(excel2pb)
ADD_SUBDIRECTORY(cxx2lua)
ADD_SUBDIRECTORY(protoc-gen-sql)
